--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             var data = await response.json();
 
             let condition = data.weather[0].main
-
+            let lowercaseCondition = condition.toLowerCase();
             console.log(data);
 
             document.querySelector(".city").innerHTML = data.name;
             document.querySelector(".temperature").innerHTML = Math.round(data.main.temp) + "°C";
             document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
             document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
-            weatherIcon.src = "images/" + condition + ".png"
+            weatherIcon.src = "images/" + lowercaseCondition + ".png"
             weatherIcon.alt = condition;
 
             document.querySelector(".weather").style.display = "block";
